--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "next": "12.0.4",
     "nodemailer": "^6.7.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "nuka-carousel": "^4.7.8",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "sass": "^1.43.5",
     "styled-components": "^5.3.10"
   },
