--- a/package.json
+++ b/package.json
@@ -9,15 +9,32 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
-    "axios": "^0.26.0",
-    "next": "12.0.4",
     "nodemailer": "^6.7.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.0.0",
     "react-responsive-carousel": "^3.2.23",
-    "sass": "^1.43.5",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "@fortawesome/fontawesome-free": "5.15.2",
+    "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
+    "bootstrap": "4.6.0",
+    "chartist": "0.11.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.3",
+    "express": "^4.18.2",
+    "gulp": "4.0.2",
+    "gulp-append-prepend": "1.0.9",
+    "mercadopago": "^1.5.16",
+    "next": "^13.4.4",
+    "react-chartist": "0.14.4",
+    "react-notification-alert": "0.0.13",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "5.0.1",
+    "reactstrap": "8.8.1",
+    "sass": "1.53.0"
   },
   "devDependencies": {
     "eslint": "7",
