--- a/package.json
+++ b/package.json
@@ -9,15 +9,9 @@
     "vercel-build": "npm install --force && next build"
   },
   "dependencies": {
-    "aos": "^2.3.4",
-    "nodemailer": "^6.7.2",
-    "nodemailer-sendgrid-transport": "^0.2.0",
-    "react": "^18.0.0",
-    "react-bootstrap": "^2.7.4",
-    "react-dom": "^18.0.0",
-    "react-responsive-carousel": "^3.2.23",
-    "styled-components": "^5.3.10",
     "@fortawesome/fontawesome-free": "5.15.2",
+    "@mercadopago/sdk-js": "^0.0.2",
+    "aos": "^2.3.4",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "bootstrap": "4.6.0",
@@ -28,13 +22,20 @@
     "gulp-append-prepend": "1.0.9",
     "mercadopago": "^1.5.16",
     "next": "^13.4.4",
+    "nodemailer": "^6.7.2",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.7.4",
     "react-chartist": "0.14.4",
+    "react-dom": "^18.0.0",
     "react-notification-alert": "0.0.13",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "reactstrap": "8.8.1",
-    "sass": "1.53.0"
+    "sass": "1.53.0",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "eslint": "7",
