--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-scripts": "5.0.1",
     "reactstrap": "8.8.1",
     "sass": "1.53.0",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
   },
   "devDependencies": {
     "eslint": "7",
