--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel-build": "npm install --force && next build"
+    "vercel-build": "npm install --force"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.2",
@@ -35,7 +35,7 @@
     "react-scripts": "5.0.1",
     "reactstrap": "8.8.1",
     "sass": "1.53.0",
-    "styled-components": "^5.3.10",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "eslint": "7",
