--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel-build": "npm install --force && npm install --legacy-peer-deps"
+    "vercel-build": "npm install --force"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.2",
@@ -21,7 +21,6 @@
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
     "mercadopago": "^1.5.16",
-    "next": "^13.4.4",
     "nodemailer": "^6.7.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "react": "^18.2.0",
